V2150: Correzioni in D330,D335,D340,D345,P288,P330,P350,P460,P510,P608,P910,P940,Overallview,Waterview,Plantview

--- a/Prevu.Synoptics.V2150_Planeta/Pages/P288.xaml
+++ b/Prevu.Synoptics.V2150_Planeta/Pages/P288.xaml
@@ -8,7 +8,7 @@
              x:Class="Prevu.Synoptics.P288" mc:Ignorable="d" 
              Height="850" Width="1550" d:Background="{DynamicResource MaterialDesignPaper}">
     <Canvas>
-        <Labels:Pipe RenderTransformOrigin="0.5,0.5" Width="196" StatusComponent="477-01-MA1" Color="Water" Canvas.Left="450" Canvas.Top="226" HorizontalAlignment="Left" VerticalAlignment="Center">
+        <Labels:Pipe RenderTransformOrigin="0.5,0.5" Width="196" StatusComponent="477-01-MA1" Color="Water" Canvas.Left="450" Canvas.Top="226" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilityComponent="477-22-CV1" >
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -120,7 +120,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Center" Width="122" StatusComponent="477-01-MA1" Color="Water" Canvas.Left="546" Canvas.Top="130" VisibilityComponent="477-22-CV1" VisibilitySignal="LS1"/>
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Center" Width="122" StatusComponent="477-01-MA1" Color="Water" Canvas.Left="546" Canvas.Top="130" VisibilityComponent="477-22-CV1"/>
         <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" RenderTransformOrigin="0.5,0.5" Width="264" StatusComponent="457-01-MA1" Color="Water" Canvas.Left="398" Canvas.Top="188">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
