--- a/Prevu.Synoptics.V2150_Planeta/Pages/P350.xaml
+++ b/Prevu.Synoptics.V2150_Planeta/Pages/P350.xaml
@@ -29,34 +29,10 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Color="Water" Width="89" StatusComponent="373-01-MA1" Canvas.Left="144" Canvas.Top="479" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:Pipe Color="Water" Width="96" StatusComponent="373-01-MA1" Canvas.Left="137" Canvas.Top="557" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:Pipe Width="60" StatusComponent="346-01-MA1" PipeHeight="Medium" Canvas.Left="343" Canvas.Top="143" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top">
-            <Labels:Pipe.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Labels:Pipe.RenderTransform>
-        </Labels:Pipe>
-        <Labels:Pipe Width="64" StatusComponent="341-01-MA1" PipeHeight="Medium" Canvas.Left="360" Canvas.Top="161" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top">
-            <Labels:Pipe.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Labels:Pipe.RenderTransform>
-        </Labels:Pipe>
-        <Labels:Pipe Width="207" StatusComponent="331-01-MA1" PipeHeight="Medium" Canvas.Left="252" Canvas.Top="100" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Width="91" StatusComponent="346-01-MA1" PipeHeight="Medium" Canvas.Left="368" Canvas.Top="117" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Width="71" StatusComponent="341-01-MA1" PipeHeight="Medium" Canvas.Left="388" Canvas.Top="134" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="222" StatusComponent="336-01-MA1" PipeHeight="Medium" Canvas.Left="216" Canvas.Top="82"/>
-        <Labels:Pipe Width="141" StatusComponent="346-01-MA1" PipeHeight="Medium" Canvas.Left="237" Canvas.Top="169" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:Pipe Width="144" StatusComponent="341-01-MA1" PipeHeight="Medium" Canvas.Left="252" Canvas.Top="188" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:Pipe Width="207" StatusComponent="341-01-MA1" PipeHeight="Medium" Canvas.Left="252" Canvas.Top="92" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:Pipe Width="211" StatusComponent="336-01-MA1" PipeHeight="Medium" Canvas.Left="248" Canvas.Top="106" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:Pipe Width="211" StatusComponent="331-01-MA1" PipeHeight="Medium" Canvas.Left="248" Canvas.Top="120" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="222" StatusComponent="346-01-MA1" PipeHeight="Medium" Canvas.Left="216" Canvas.Top="78"/>
         <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="207" StatusComponent="376-01-MA1" PipeHeight="Medium" Canvas.Left="1071" Canvas.Top="334"/>
         <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="334" StatusComponent="350-01-MA1" PipeHeight="Medium" Canvas.Left="623" Canvas.Top="244"/>
         <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Color="Water" Width="150" RenderTransformOrigin="0.5,0.5" StatusComponent="350-01-MA1" Canvas.Left="416" Canvas.Top="301">
@@ -212,16 +188,6 @@
         </Labels:Pipe>
         <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Color="Water" Width="189" StatusComponent="373-01-MA1" Canvas.Left="231" Canvas.Top="517"/>
         <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="144" Color="Water" StatusComponent="377-01-MA1" VisibilityComponent="377-23-CV1" Canvas.Left="1328" Canvas.Top="526"/>
-        <Labels:Pipe Color="Water" Width="82" StatusComponent="373-01-MA1" Canvas.Left="190" Canvas.Top="518" HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5">
-            <Labels:Pipe.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Labels:Pipe.RenderTransform>
-        </Labels:Pipe>
         <Rectangle HorizontalAlignment="Center" Height="35" Stroke="Black" VerticalAlignment="Top" Width="2" Canvas.Left="644" Canvas.Top="601"/>
         <Rectangle HorizontalAlignment="Left" Height="36" Stroke="Black" VerticalAlignment="Center" Width="2" RenderTransformOrigin="0.5,0.5" Canvas.Left="449" Canvas.Top="730">
             <d:Rectangle.RenderTransform>
@@ -322,11 +288,9 @@
         <Machines:V01_WCE_Centrifuge Canvas.Left="432" Canvas.Top="66" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:V01_SCW_Screw_wHopper Canvas.Left="894" Canvas.Top="214" Height="188" Width="214" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:V01_VB_VibratingScreen Canvas.Left="950" Canvas.Top="483" Height="100" Width="100" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:JumpLabel HorizontalAlignment="Center" VerticalAlignment="Top" JumpFromLabel="350-01-MA1" JumpToLabel="330-WASHING" Canvas.Left="186" Canvas.Top="61"/>
+        <Labels:JumpLabel HorizontalAlignment="Center" VerticalAlignment="Top" JumpFromLabel="350-01-MA1" JumpToLabel="330-WASHING" Canvas.Left="186" Canvas.Top="69"/>
         <Labels:JumpLabel HorizontalAlignment="Center" VerticalAlignment="Top" JumpFromLabel="376-01-MA1" JumpToLabel="380-01-MA1" Canvas.Left="1232" Canvas.Top="304"/>
-        <Labels:JumpLabel JumpFromLabel="354-HEAT" JumpToLabel="340-WASHING" Direction="Left" Canvas.Left="76" Canvas.Top="525" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:JumpLabel JumpFromLabel="354-HEAT" JumpToLabel="330-WASHING" Direction="Left" Canvas.Left="76" Canvas.Top="447" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:JumpLabel JumpFromLabel="350-01-MA1" JumpToLabel="340-WASHING" Canvas.Left="186" Canvas.Top="149" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:JumpLabel JumpFromLabel="354-HEAT" JumpToLabel="330-WASHING" Direction="Left" Canvas.Left="165" Canvas.Top="485" HorizontalAlignment="Left" VerticalAlignment="Top"/>
         <Labels:DetailsLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="371-VIEW" DetailsPageName="D371" HideComponentName="True" Canvas.Left="637" Canvas.Top="419"/>
         <Labels:DetailsLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="354-HEAT" DetailsPageName="D354" Canvas.Left="257" Canvas.Top="612"/>
         <Labels:DetailsLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="376-HOPPER" DetailsPageName="D376" HideComponentName="True" Canvas.Left="875" Canvas.Top="272"/>
