--- a/Prevu.Synoptics.V2150_Planeta/Pages/P510.xaml
+++ b/Prevu.Synoptics.V2150_Planeta/Pages/P510.xaml
@@ -50,7 +50,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="130" StatusComponent="535-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="211" Canvas.Top="780" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Width="130" StatusComponent="535-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="211" Canvas.Top="783" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:Pipe Width="56" StatusComponent="510-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="447" Canvas.Top="298" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
@@ -155,7 +155,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="130" StatusComponent="545-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="1336" Canvas.Top="783" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Width="130" StatusComponent="545-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="1336" Canvas.Top="783" HorizontalAlignment="Center" VerticalAlignment="Center"/>
         <Labels:Pipe Width="88" StatusComponent="538-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="945" Canvas.Top="626" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
@@ -297,10 +297,10 @@
         <Rectangle Height="46" Stroke="Black" Width="6" Fill="#FFBDBDBD" RenderTransformOrigin="0.5,0.5" Canvas.Left="1133" Canvas.Top="204" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:SCW_ScrewConveyor_straight RenderTransformOrigin="0.5,0.5" Width="165" Height="22" Canvas.Left="661" Canvas.Top="490" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:DRY_HeatingBattery Height="50" Width="52" Canvas.Left="701" Canvas.Top="694" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Machines:SCW_ScrewConveyor_straight RenderTransformOrigin="0.5,0.5" Width="150" Height="22" Canvas.Left="322" Canvas.Top="774" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <Machines:SCW_ScrewConveyor_straight RenderTransformOrigin="0.5,0.5" Width="150" Height="22" Canvas.Left="322" Canvas.Top="778" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:SCW_ScrewConveyor_straight RenderTransformOrigin="0.5,0.5" Width="159" Height="22" Canvas.Left="842" Canvas.Top="490" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:DRY_HeatingBattery Height="50" Width="52" Canvas.Left="908" Canvas.Top="695" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Machines:SCW_ScrewConveyor_straight RenderTransformOrigin="0.5,0.5" Width="150" Height="22" Canvas.Left="1203" Canvas.Top="778" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <Machines:SCW_ScrewConveyor_straight RenderTransformOrigin="0.5,0.5" Width="150" Height="22" Canvas.Left="1203" Canvas.Top="778" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:V01_VT_CMM_Blower_Air_Compressor Canvas.Left="564" Canvas.Top="304" Height="50" Width="50" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:V01_VT_CMM_Blower_Air_Compressor Canvas.Left="854" Canvas.Top="695" HorizontalAlignment="Center" VerticalAlignment="Top" Height="50" Width="50"/>
         <Machines:V01_VT_CMM_Blower_Air_Compressor Canvas.Left="1136" Canvas.Top="577" HorizontalAlignment="Center" VerticalAlignment="Top" Height="50" Width="50"/>
@@ -371,7 +371,7 @@
                 </TransformGroup>
             </Machines:CV_Valve.RenderTransform>
         </Machines:CV_Valve>
-        <Misc:DashedLine RenderTransformOrigin="0.5,0.5" Height="4" Width="705" Canvas.Left="833" Canvas.Top="414" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Misc:DashedLine RenderTransformOrigin="0.5,0.5" Height="4" Width="540" Canvas.Left="833" Canvas.Top="414" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Misc:DashedLine RenderTransformOrigin="0.5,0.5" Height="4" Width="400" Canvas.Left="634" Canvas.Top="613" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Misc:DashedLine.RenderTransform>
                 <TransformGroup>
@@ -394,13 +394,13 @@
             </Misc:DashedLine.RenderTransform>
         </Misc:DashedLine>
         <Misc:DashedLine RenderTransformOrigin="0.5,0.5" Height="4" Width="351" Canvas.Left="62" Canvas.Top="595" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <TextBlock TextWrapping="Wrap" Height="50" Width="94" TextAlignment="Center" FontSize="36" Foreground="Black" FontWeight="Bold" Canvas.Left="416" Canvas.Top="414" HorizontalAlignment="Left" VerticalAlignment="Center"><Run Text="S7"/><Run Language="it-it" Text="11"/></TextBlock>
+        <TextBlock TextWrapping="Wrap" Height="50" Width="94" TextAlignment="Center" FontSize="36" Foreground="Black" FontWeight="Bold" Canvas.Left="417" Canvas.Top="421" HorizontalAlignment="Center" VerticalAlignment="Top"><Run Text="S7"/><Run Language="it-it" Text="11"/></TextBlock>
         <TextBlock Width="94" VerticalAlignment="Top" Canvas.Top="230" TextWrapping="Wrap" TextAlignment="Center" Canvas.Left="790" Height="50" HorizontalAlignment="Left" FontSize="36" FontWeight="Bold" Foreground="Black"><Run Language="it-it" Text="S710"/></TextBlock>
-        <TextBlock TextWrapping="Wrap" Height="50" Width="94" TextAlignment="Center" FontSize="36" Foreground="Black" FontWeight="Bold" HorizontalAlignment="Left" Canvas.Left="1114" Canvas.Top="414" VerticalAlignment="Center"><Run Language="it-it" Text="S720"/></TextBlock>
+        <TextBlock TextWrapping="Wrap" Height="50" Width="94" TextAlignment="Center" FontSize="36" Foreground="Black" FontWeight="Bold" HorizontalAlignment="Left" Canvas.Left="1235" Canvas.Top="421" VerticalAlignment="Center"><Run Language="it-it" Text="S720"/></TextBlock>
         <Labels:JumpLabel HorizontalAlignment="Left" VerticalAlignment="Center" JumpFromLabel="510-01-MA1" JumpToLabel="466-01-MA1" Canvas.Left="41" Canvas.Top="67"/>
-        <Labels:JumpLabel JumpFromLabel="535-01-MA1" JumpToLabel="546-01-MA1" Canvas.Left="154" Canvas.Top="751" HorizontalAlignment="Left" VerticalAlignment="Center" Direction="Left"/>
+        <Labels:JumpLabel JumpFromLabel="535-01-MA1" JumpToLabel="546-01-MA1" Canvas.Left="154" Canvas.Top="753" HorizontalAlignment="Center" VerticalAlignment="Top" Direction="Left"/>
         <Labels:JumpLabel JumpFromLabel="519-01-MA1" JumpToLabel="380-23-CV1" Canvas.Left="1063" Canvas.Top="107" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:JumpLabel JumpFromLabel="545-01-MA1" JumpToLabel="546-01-MA1" Canvas.Left="1436" Canvas.Top="753" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:JumpLabel JumpFromLabel="545-01-MA1" JumpToLabel="546-01-MA1" Canvas.Left="1436" Canvas.Top="753" HorizontalAlignment="Center" VerticalAlignment="Center"/>
         <Labels:DetailsLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="510-VALVE" DetailsPageName="D510" Canvas.Left="452" Canvas.Top="77"/>
         <Labels:DetailsLabel ComponentName="527-HOPPER" DetailsPageName="D527" Canvas.Left="871" Canvas.Top="329" HideComponentName="True" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DetailsLabel ComponentName="510-RINSE" DetailsPageName="D510_2" Canvas.Left="206" Canvas.Top="177" HorizontalAlignment="Left" VerticalAlignment="Center"/>
