--- a/Prevu.Synoptics.V2150_Planeta/Pages/P940.xaml
+++ b/Prevu.Synoptics.V2150_Planeta/Pages/P940.xaml
@@ -21,7 +21,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="42" StatusComponent="928-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="246" Canvas.Top="124" HorizontalAlignment="Center" VerticalAlignment="Top" VisibilityComponent="939-21-CV1" VisibilitySignal="LS1"/>
+        <Labels:Pipe Width="42" StatusComponent="928-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="246" Canvas.Top="123" HorizontalAlignment="Center" VerticalAlignment="Top" VisibilityComponent="939-21-CV1" VisibilitySignal="LS1"/>
         <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="60" StatusComponent="950-01-ECS2" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="687" Canvas.Top="433">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
@@ -324,7 +324,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="766" RenderTransformOrigin="0.5,0.5" StatusComponent="957-01-MA1" Color="Air" Canvas.Left="746" Canvas.Top="65" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Width="766" RenderTransformOrigin="0.5,0.5" StatusComponent="957-01-MA1" Color="Air" Canvas.Left="746" Canvas.Top="75" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:Pipe Width="278" StatusComponent="957-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="1371" Canvas.Top="212" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
@@ -335,7 +335,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="40" StatusComponent="957-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="727" Canvas.Top="93" HorizontalAlignment="Left" VerticalAlignment="Center" >
+        <Labels:Pipe Width="40" StatusComponent="957-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="727" Canvas.Top="93" HorizontalAlignment="Center" VerticalAlignment="Top" >
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
