--- a/Prevu.Synoptics.V2150_Planeta/WaterView.xaml
+++ b/Prevu.Synoptics.V2150_Planeta/WaterView.xaml
@@ -200,8 +200,8 @@
         <Labels:Pipe Color="Water" Width="40" RenderTransformOrigin="0.5,0.5" StatusComponent="477-01-MA1" Canvas.Left="1569" Canvas.Top="508" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilityComponent="477-21-CV1" />
         <Labels:Pipe Color="Water" Width="39" RenderTransformOrigin="0.5,0.5" StatusComponent="477-01-MA1" Canvas.Left="1490" Canvas.Top="538" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilityComponent="477-21-CV1"/>
         <Labels:Pipe Color="Water" Width="43" RenderTransformOrigin="0.5,0.5" StatusComponent="473-01-MA1" Canvas.Left="1416" Canvas.Top="460" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Color="Water" Width="78" RenderTransformOrigin="0.5,0.5" StatusComponent="477-01-MA1" Canvas.Left="1653" Canvas.Top="634" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilityComponent="477-23-CV1" />
-        <Labels:Pipe Color="Water" Width="586" RenderTransformOrigin="0.5,0.5" StatusComponent="477-01-MA1" Canvas.Left="1437" Canvas.Top="334" HorizontalAlignment="Center" VerticalAlignment="Top" VisibilityComponent="477-23-CV1" Icon="Left">
+        <Labels:Pipe Color="Water" Width="78" RenderTransformOrigin="0.5,0.5" StatusComponent="477-01-MA1" Canvas.Left="1653" Canvas.Top="634" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilityComponent="477-22-CV1" />
+        <Labels:Pipe Color="Water" Width="586" RenderTransformOrigin="0.5,0.5" StatusComponent="477-01-MA1" Canvas.Left="1437" Canvas.Top="334" HorizontalAlignment="Center" VerticalAlignment="Top" VisibilityComponent="477-22-CV1" Icon="Left">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -298,7 +298,7 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Color="Water" Width="69" RenderTransformOrigin="0.5,0.5" StatusComponent="236-01-MA1" Canvas.Left="698" Canvas.Top="155" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-        <Labels:Pipe Color="Water" Width="144" StatusComponent="477-01-MA1" Canvas.Left="703" Canvas.Top="123" RenderTransformOrigin="0.5,0.5" VisibilityComponent="477-23-CV1" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Color="Water" Width="144" StatusComponent="477-01-MA1" Canvas.Left="703" Canvas.Top="123" RenderTransformOrigin="0.5,0.5" VisibilityComponent="477-22-CV1" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -319,8 +319,8 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Color="Water" Width="959" RenderTransformOrigin="0.5,0.5" StatusComponent="477-01-MA1" Canvas.Left="773" Canvas.Top="43" VisibilityComponent="477-23-CV1" HorizontalAlignment="Center" VerticalAlignment="Top" Icon="Left"/>
-        <Labels:Pipe Color="Water" Width="306" StatusComponent="457-01-MA1" Canvas.Left="1252" Canvas.Top="228" RenderTransformOrigin="0.5,0.5" VisibilityComponent="377-21-CV1" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Color="Water" Width="959" RenderTransformOrigin="0.5,0.5" StatusComponent="477-01-MA1" Canvas.Left="773" Canvas.Top="43" VisibilityComponent="477-22-CV1" HorizontalAlignment="Center" VerticalAlignment="Top" Icon="Left"/>
+        <Labels:Pipe Color="Water" Width="306" StatusComponent="457-01-MA1" Canvas.Left="1252" Canvas.Top="228" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -871,8 +871,7 @@
         <Labels:ValueLabel Canvas.Left="378" Canvas.Top="911" HorizontalAlignment="Center" VerticalAlignment="Center" ParameterName="ACT_VOLUME" TrendName="VOLUME_CONTROL" ComponentName="110-41-LT1"/>
         <Labels:ValueLabel Canvas.Left="201" Canvas.Top="894" HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="115-41-LT1" TrendName="LEVEL"/>
         <Labels:ValueLabel Canvas.Left="201" Canvas.Top="915" HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="115-41-LT1" TrendName="VOLUME_CONTROL" ParameterName="ACT_VOLUME"/>
-        <Labels:ValueLabel Canvas.Left="1190" Canvas.Top="941" HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="518-41-LT1" TrendName="LEVEL"/>
-        <Labels:ValueLabel Canvas.Left="1190" Canvas.Top="962" HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="518-41-LT1" ParameterName="ACT_VOLUME" TrendName="VOLUME_CONTROL"/>
+        <Labels:ValueLabel Canvas.Left="1190" Canvas.Top="953" HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="518-41-LT1" TrendName="LEVEL"/>
         <Labels:ValueLabel Canvas.Left="777" Canvas.Top="723" HorizontalAlignment="Left" VerticalAlignment="Center" TrendName="LEVEL" ComponentName="335-41-LT1"/>
         <Labels:ValueLabel Canvas.Left="777" Canvas.Top="739" HorizontalAlignment="Center" VerticalAlignment="Top" ParameterName="ACT_VOLUME" TrendName="VOLUME_CONTROL" ComponentName="335-41-LT1"/>
         <Labels:ValueLabel Canvas.Left="378" Canvas.Top="933" HorizontalAlignment="Center" VerticalAlignment="Center" ComponentName="110-42-TT1" TrendName="TEMPERATURE"/>
@@ -889,8 +888,8 @@
         <Labels:ValueLabel Canvas.Left="790" Canvas.Top="1076" TrendName="LEVEL" ComponentName="370-41-LT1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:ValueLabel Canvas.Left="790" Canvas.Top="1097" ParameterName="ACT_VOLUME" TrendName="VOLUME_CONTROL" ComponentName="370-41-LT1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:ValueLabel Canvas.Left="790" Canvas.Top="1119" ComponentName="370-42-TT1" TrendName="TEMPERATURE" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:ValueLabel Canvas.Left="1438" Canvas.Top="610" TrendName="LEVEL" ComponentName="470-41-LT1" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-        <Labels:ValueLabel Canvas.Left="1438" Canvas.Top="632" ParameterName="ACT_VOLUME" TrendName="VOLUME_CONTROL" ComponentName="470-41-LT1" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <Labels:ValueLabel Canvas.Left="1438" Canvas.Top="610" TrendName="LEVEL" ComponentName="470-41-LT1" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <Labels:ValueLabel Canvas.Left="1438" Canvas.Top="632" ParameterName="ACT_VOLUME" TrendName="VOLUME_CONTROL" ComponentName="470-41-LT1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:ValueLabel Canvas.Left="1438" Canvas.Top="654" ComponentName="470-42-TT1" TrendName="TEMPERATURE" HorizontalAlignment="Left" VerticalAlignment="Top"/>
         <Labels:ValueLabel Canvas.Left="1181" Canvas.Top="356" TrendName="LEVEL" ComponentName="450-41-LT1" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:ValueLabel Canvas.Left="1181" Canvas.Top="378" ParameterName="ACT_VOLUME" TrendName="VOLUME_CONTROL" ComponentName="450-41-LT1" HorizontalAlignment="Center" VerticalAlignment="Top"/>
