--- a/Prevu.Synoptics.V2150_Planeta/Details/D335.xaml
+++ b/Prevu.Synoptics.V2150_Planeta/Details/D335.xaml
@@ -44,7 +44,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Machines:V01_STR_BatchReactor_wBottomAgitator Height="300" Width="137" Canvas.Left="196" Canvas.Top="175" ComponentName="335-41-LT1" TrendName="LEVEL" HorizontalAlignment="Center" VerticalAlignment="Center" Color="WetMaterial"/>
+        <Machines:V01_STR_BatchReactor Canvas.Left="196" Canvas.Top="175" Height="300" Width="137" Color="WetMaterial" ComponentName="335-41-LT1" TrendName="LEVEL" HorizontalAlignment="Center" VerticalAlignment="Center"/>
         <Machines:CV_Valve Height="100" Width="100" RenderTransformOrigin="0.5,0.5" Canvas.Left="160" Canvas.Top="61" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Machines:CV_Valve.RenderTransform>
                 <TransformGroup>
@@ -71,13 +71,12 @@
         <Rectangle Height="30" Stroke="Black" Width="6" Fill="#FFBDBDBD" RenderTransformOrigin="0.5,0.5" Canvas.Left="579" Canvas.Top="392" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Rectangle Height="6" Stroke="Black" Width="30" Fill="#FFBDBDBD" RenderTransformOrigin="0.5,0.5" Canvas.Left="306" Canvas.Top="41" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="335-01-MA1" Canvas.Left="218" Canvas.Top="150" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel ComponentName="335-42-TT1" RenderTransformOrigin="0.478,0.56" Canvas.Left="218" Canvas.Top="354" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:DeviceLabel ComponentName="335-41-LT1" Canvas.Left="218" Canvas.Top="282" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:DeviceLabel ComponentName="335-42-TT1" RenderTransformOrigin="0.478,0.56" Canvas.Left="218" Canvas.Top="376" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:DeviceLabel ComponentName="335-41-LT1" Canvas.Left="218" Canvas.Top="304" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DeviceLabel ComponentName="337-21-CV1" Canvas.Left="36" Canvas.Top="177" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="336-01-MA1" Canvas.Left="466" Canvas.Top="326" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="335-23-CV1" Canvas.Left="350" Canvas.Top="326" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="335-21-CV1" Canvas.Left="92" Canvas.Top="86" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel ComponentName="335-03-MA1" Canvas.Left="219" Canvas.Top="456" HorizontalAlignment="Left" VerticalAlignment="Center"/>
 
     </Canvas>
 </UserControl>
